--- a/app/src/main/res/layout/item_textnew.xml
+++ b/app/src/main/res/layout/item_textnew.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:text="品牌制造商直供"
-        android:id="@+id/tv_text_name"
+        android:id="@+id/tv_new_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="周一周四 新品首发"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
