--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -6,9 +6,9 @@
 
     <Button
         android:id="@+id/btn_one"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FFEB3B"
+        android:backgroundTint="#CBD1D0"
         android:drawableLeft="@drawable/ic_sousuo"
         android:gravity="center"
         android:hint="商品搜索,共239款好物"
