--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -5,9 +5,22 @@
     android:layout_height="match_parent">
 
 
+    <Button
+        android:id="@+id/btn_one"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#CBD1D0"
+        android:drawableLeft="@drawable/ic_sousuo"
+        android:gravity="center"
+        android:hint="商品搜索,共239款好物"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_one"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
