--- a/app/src/main/res/layout/item_textpic.xml
+++ b/app/src/main/res/layout/item_textpic.xml
@@ -5,29 +5,39 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/cate_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/topic_image"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/cate_name"
+        android:id="@+id/topic_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cate_image" />
+        app:layout_constraintTop_toBottomOf="@id/topic_image" />
 
     <TextView
-        android:textColor="#CC1919"
-        android:id="@+id/cate_price"
+        android:id="@+id/topic_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:textColor="#C52323"
+        app:layout_constraintLeft_toRightOf="@id/topic_name"
+        app:layout_constraintTop_toBottomOf="@id/topic_image" />
+
+    <TextView
+        android:id="@+id/topic_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textColor="#CDC3C3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cate_name" />
+        app:layout_constraintTop_toBottomOf="@id/topic_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
